# These files will end up in the install include directory
# For example, /usr/include
nobase_include_HEADERS = alt_mutex/mutex_instance.h alt_mutex/locker_mutex_rd.h alt_mutex/mutex_rw_instance.h alt_mutex/base_mutex_rw.h alt_mutex/locker_mutex.h alt_mutex/locker_mutex_wr.h alt_mutex/execaroundptr_proxy.h alt_mutex/locker_rwmutex_allinc.h
